# gitdiffviz

./: LICENSE  OcamlPortPlan.md  README.md  Tutorial.md  dune-project  git_visualization_diff.opam
examples/: sample-diff.json  sample-scene.json  sample-semantic-hierarchy.json  sample-semantic-input.json
lib/: cpp_symbols.ml  cpp_symbols.mli  cpp_tree_sitter_bindings.c  diff_types.ml  diff_types.mli  dune  git_diff.ml  git_diff.mli  hierarchy.ml  hierarchy.mli  hierarchy_types.ml  hierarchy_types.mli  json_codec.ml  json_codec.mli  language.ml  language.mli  parser_registry.ml  parser_registry.mli  rust_symbols.ml  rust_tree_sitter_bindings.c  scene.ml  scene.mli  scene_types.ml  scene_types.mli  semantic_extract.ml  semantic_extract.mli  semantic_join.ml  semantic_join.mli  semantic_types.ml  semantic_types.mli  swift_symbols.ml  swift_tree_sitter_bindings.c  symbol_extractor_intf.ml  symbol_normalization.ml  timeline.ml  timeline.mli
scripts/: render-repo-diffs.sh
test/: dune  test_pipeline.ml
test/fixtures/: Sample.swift  sample.cpp  sample.rs
test/snapshots/: semantic-extraction.json
viewer/: app.js  index.html  serve-preview.mjs  styles.css
